@@ -739,7 +739,8 @@ valueType org.fenixedu.academic.domain.util.i18n.Languages as Languages {
 
     class Shift  {      
         Integer lotacao;
-        String nome;
+        String nome; // deprecated
+        String name;
         String comment;
         Languages languages;
     }
